--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "swiftmailer/swiftmailer": "^6.1.3",
+        "swiftmailer/swiftmailer": "dev-wl-bundle#58be9295bea3f6612a12bb9ca8c27e055f95e821",
         "symfony/dependency-injection": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
         "symfony/config": "^4.4|^5.0"
@@ -28,6 +28,12 @@
         "symfony/phpunit-bridge": "^4.4|^5.0",
         "symfony/yaml": "^4.4|^5.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/wlogic/swiftmailer"
+        }
+    ],
     "conflict": {
         "twig/twig": "<1.41|>=2.0,<2.10"
     },
